--- a/app/views/friends/_lookup.html.erb
+++ b/app/views/friends/_lookup.html.erb
@@ -17,6 +17,7 @@
     <%= render 'common/spinner' %>
     <% if @users %>
         <% if @users.size > 0 %>
+        <h3>Search Results</h3>
         <div id="friend-lookup-results", class="well results-block col-md-10">
             <table class="search-results-table col-md-12">
                 <tbody>
