--- a/app/views/users/my_friends.html.erb
+++ b/app/views/users/my_friends.html.erb
@@ -1,4 +1,4 @@
-<%#= render 'friends/lookup' %>
+<%= render 'friends/lookup' %>
 
 <% if @friendships.size > 0 %>
     <table class="table table-striped">
@@ -21,7 +21,7 @@
                 <td><%= friend.email %></td>
                 <td>
                     <%= link_to 'View Profile', user_path(friend), class: 'btn btn-primary btn-xs' %>
-                    <%=link_to 'Remove Friend', friendship_path(friend), 
+                    <%= link_to 'Remove Friend', friendship_path(friend), 
                         :method => :delete, 
                         :data => { :confirm => "Are you sure?" },
                         :class => "btn btn-xs btn-danger" %>
